--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,31 +1,26 @@
-<div class="row">
-  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <pie-chart></pie-chart>
+  <div class="row">
+  <div class="col-xl-16 col-lg-12 col-md-12 col-sm-12 col-xs-12">
   </div>
-</div>
 
-<div class="row">
+  <div class="row">
   <ba-card class="col-xlg-6 col-xl-6 col-lg-12 col-sm-12 col-xs-12"
-    title="Acquisition Channels" baCardClass="traffic-panel medium-card">
-    <traffic-chart></traffic-chart>
+    title="Tipo de Inspeção" baCardClass="small-card">
   </ba-card>
 
   <ba-card class="col-xlg-6 col-xl-6 col-lg-12 col-sm-12 col-xs-12"
-           title="Users by Country" baCardClass="medium-card">
-    <users-map></users-map>
+           title="Eixos" baCardClass="small-card">
   </ba-card>
-</div>
+  </div>
 
-<div class="row">
   <div class="col-xlg-9 col-xl-6 col-lg-6  col-md-12 col-sm-12 col-xs-12">
     <div class="row">
       <ba-card class="col-xlg-8 col-xl-12 col-lg-12 col-md-7 col-sm-12 col-xs-12"
-               title="Revenue" baCardClass="medium-card">
-        <line-chart></line-chart>
+               title="Município" baCardClass="small-card">
       </ba-card>
+
+
       <ba-card class="col-xlg-4 col-xl-12 col-lg-12 col-md-5 col-sm-12 col-xs-12"
-               baCardClass="popular-app medium-card">
-        <popular-app></popular-app>
+               title="Equipamento" baCardClass="small-card">
       </ba-card>
     </div>
   </div>
@@ -33,7 +28,6 @@
   <div class="col-xlg-3 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
     <ba-card title="Feed"
              baCardClass="large-card with-scroll feed-panel">
-      <feed></feed>
     </ba-card>
   </div>
 
