--- a/src/app/theme/sass/conf/colorSchemes/_blur.scss
+++ b/src/app/theme/sass/conf/colorSchemes/_blur.scss
@@ -59,7 +59,7 @@ $hoverlink: $primary-dark;
 @mixin body-bg() {
   background-color: $body-bg;
 
-  $mainBgUrl: $images-root + 'cc3a9u-de-sinop.jpg';
+  $mainBgUrl: $images-root + 'cinza.jpg';
 
   &::before {
     content: '';
