--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,46 +1,36 @@
-  <div class="row">
-  <div class="col-xl-16 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </div>
+<div class="col-xs-12-col-sm-6-col-md-8">
+
 
   <div class="row">
-  <ba-card class="col-xlg-6 col-xl-6 col-lg-12 col-sm-12 col-xs-12"
+  <ba-card class="col-xlg-3 col-xl-3"
     title="Tipo de Inspeção" baCardClass="small-card">
   </ba-card>
 
-  <ba-card class="col-xlg-6 col-xl-6 col-lg-12 col-sm-12 col-xs-12"
+  <ba-card class="col-xl-3 col-xl-3"
            title="Eixos" baCardClass="small-card">
   </ba-card>
   </div>
 
-  <div class="col-xlg-9 col-xl-6 col-lg-6  col-md-12 col-sm-12 col-xs-12">
-    <div class="row">
+  <div class="row">
       <ba-card class="col-xlg-8 col-xl-12 col-lg-12 col-md-7 col-sm-12 col-xs-12"
                title="Município" baCardClass="small-card">
       </ba-card>
 
 
-      <ba-card class="col-xlg-4 col-xl-12 col-lg-12 col-md-5 col-sm-12 col-xs-12"
+      <ba-card class="col-xlg-8 col-xl-12 col-lg-12 col-md-7 col-sm-12 col-xs-12"
                title="Equipamento" baCardClass="small-card">
       </ba-card>
+  </div>
+
+    <div class="col-xlg-3 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+      <ba-card title="Feed"
+      baCardClass="small-card with-scroll feed-panel">
+      </ba-card>
     </div>
-  </div>
 
-  <div class="col-xlg-3 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-    <ba-card title="Feed"
-             baCardClass="large-card with-scroll feed-panel">
-    </ba-card>
-  </div>
 
-</div>
-
-<div class="row shift-up">
-  <ba-card class="col-xlg-3 col-lg-6 col-md-12 col-sm-12 col-xs-12" title="To Do List"
-           baCardClass="xmedium-card feed-comply-panel with-scroll todo-panel">
-    <todo></todo>
-  </ba-card>
   <ba-card class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xs-12" title="Calendar"
            baCardClass="xmedium-card feed-comply-panel with-scroll calendar-panel">
-    <calendar></calendar>
   </ba-card>
 </div>
 
