--- a/src/app/theme/components/baMsgCenter/baMsgCenter.html
+++ b/src/app/theme/components/baMsgCenter/baMsgCenter.html
@@ -3,7 +3,7 @@
     <a href class="dropdown-toggle" id="msg-dd1" data-toggle="dropdown" aria-expanded="false">
       <i class="fa fa-bell-o"></i><span>5</span>
 
-      <div class="notification-ring"></div>
+      <div class=""></div>
     </a>
 
     <div class="top-dropdown-menu dropdown-menu" aria-labelledby="msg-dd1">
@@ -30,7 +30,7 @@
   <li class="dropdown">
     <a href class="msg dropdown-toggle" id="msg-dd2" data-toggle="dropdown" aria-expanded="false">
       <i class="fa fa-envelope-o"></i><span>5</span>
-      <div class="notification-ring"></div>
+      <div class="notification"></div>
     </a>
     <div class="top-dropdown-menu dropdown-menu" aria-labelledby="msg-dd2">
       <i class="dropdown-arr"></i>
