Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1).

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,36 +1,54 @@
 <div class="col-xs-12-col-sm-6-col-md-8">
 
-
-  <div class="row">
-  <ba-card class="col-xlg-3 col-xl-3"
-    title="Tipo de Inspeção" baCardClass="small-card">
-  </ba-card>
-
-  <ba-card class="col-xl-3 col-xl-3"
-           title="Eixos" baCardClass="small-card">
-  </ba-card>
+  <div class="button-wrapper">
+    <button type="button" class="btn btn-default btn-raised">INÍCIO</button>
+    <button type="button" class="btn btn-default btn-raised">AJUDA</button>
   </div>
 
   <div class="row">
-      <ba-card class="col-xlg-8 col-xl-12 col-lg-12 col-md-7 col-sm-12 col-xs-12"
-               title="Município" baCardClass="small-card">
+  </div>
+
+  <div class="row">
+    <ba-card class="col-xlg-6 col-xl-0"
+             title="NOVA INSPEÇÃO" baCardClass="small-card">
+      <b>INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</b>
+    </ba-card>
+
+
+      <ba-card class="col-xlg-6 col-xl-0"
+               title="VISUALIZAÇÃO DE INSPEÇÕES - FILTROS PARA SELEÇÃO" baCardClass="small-card">
+        <b>OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS.</b>
+      </ba-card>
+    </div>
+
+    <div class="row">
+    <div></div>
+
+
+
+  <div class="row">
+      <ba-card class="col-xl-3 col xl-0"
+      title="TIPO DE INSPEÇÃO" baCardClass="small-card">
       </ba-card>
 
 
-      <ba-card class="col-xlg-8 col-xl-12 col-lg-12 col-md-7 col-sm-12 col-xs-12"
+      <ba-card class="col-xl-3 col xl-0"
                title="Equipamento" baCardClass="small-card">
       </ba-card>
-  </div>
+      </div>
 
-    <div class="col-xlg-3 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+
       <ba-card title="Feed"
       baCardClass="small-card with-scroll feed-panel">
       </ba-card>
     </div>
 
 
-  <ba-card class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xs-12" title="Calendar"
-           baCardClass="xmedium-card feed-comply-panel with-scroll calendar-panel">
+  <ba-card class="col-xlg-6 col-lg-6"
+           title="Calendar"
+           baCardClass="xsmall-card feed-comply-panel with-scroll calendar-panel">
   </ba-card>
 </div>
 
+<div class="row">
+  <div></div>
