Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (2).

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -26,29 +26,53 @@
 
 
 
-  <div class="row">
-      <ba-card class="col-xl-3 col xl-0"
+      <div class="row">
+      <ba-card class="col-xl-6 col xl-0"
       title="TIPO DE INSPEÇÃO" baCardClass="small-card">
       </ba-card>
 
 
-      <ba-card class="col-xl-3 col xl-0"
-               title="Equipamento" baCardClass="small-card">
+      <ba-card class="col-xl-6 col xl-0"
+               title="EIXOS" baCardClass="small-card">
       </ba-card>
       </div>
 
+      <div class="row">
+        <div></div>
 
-      <ba-card title="Feed"
-      baCardClass="small-card with-scroll feed-panel">
+      <ba-card class="col-xl-6 col xl-0"
+        title="MUNICÍPIO" baCardClass="small-card with-scroll feed-panel">
       </ba-card>
     </div>
 
 
-  <ba-card class="col-xlg-6 col-lg-6"
-           title="Calendar"
-           baCardClass="xsmall-card feed-comply-panel with-scroll calendar-panel">
-  </ba-card>
-</div>
+    <div class="row">
+    <div></div>
+    <ba-card class="col-xl-6 col xl-0"
+           title="EQUIPAMENTO" baCardClass="small-card">
+    </ba-card>
+    </div>
 
-<div class="row">
-  <div></div>
+
+  <div class="horizontal-scroll">
+    <table class="table table-hover">
+      <thead>
+      <tr class="black-muted-bg">
+        <td class="---------"> </td>
+        <td> <b> <h2> RESULTADOS DA CONSULTA </h2> </b>  </td>
+      </tr>
+      </thead>
+      <tbody>
+
+
+      <div class="row">
+        <div></div>
+
+        <div>
+        <ba-card class="col-xl-10 col xlg-6"
+                 title="QUESTÕES" baCardClass="small-card">
+        </ba-card>
+      </div>
+
+
+
