Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2).

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -10,7 +10,7 @@
 
   <div class="row">
     <ba-card class="col-xlg-6 col-xl-0"
-             title="NOVA INSPEÇÃO" baCardClass="small-card">
+          title=" NOVA INSPEÇÃO " baCardClass="small-card">
       <b>INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</b>
     </ba-card>
 
@@ -43,36 +43,32 @@
       <ba-card class="col-xl-6 col xl-0"
         title="MUNICÍPIO" baCardClass="small-card with-scroll feed-panel">
       </ba-card>
+
+        <ba-card class="col-xl-6 col xl-0"
+                 title="EQUIPAMENTO" baCardClass="small-card with-scroll feed-panel">
+        </ba-card>
     </div>
 
 
-    <div class="row">
-    <div></div>
-    <ba-card class="col-xl-6 col xl-0"
-           title="EQUIPAMENTO" baCardClass="small-card">
-    </ba-card>
-    </div>
-
-
-  <div class="horizontal-scroll">
+      <div class="horizontal-scroll">
     <table class="table table-hover">
       <thead>
       <tr class="black-muted-bg">
-        <td class="---------"> </td>
+        <td class="-"> </td>
         <td> <b> <h2> RESULTADOS DA CONSULTA </h2> </b>  </td>
       </tr>
       </thead>
-      <tbody>
-
+    </table>
+      </div>
 
       <div class="row">
-        <div></div>
+        </div>
 
-        <div>
-        <ba-card class="col-xl-10 col xlg-6"
-                 title="QUESTÕES" baCardClass="small-card">
-        </ba-card>
+      <div class="row">
       </div>
+      <ba-card class="col-xlg-0 col-xl-0"
+               title="" baCardClass="small-card">
+      </ba-card>
 
 
 
