-inserção da segunda tela. -criação dos componentes: botão dos equipamentos e botão dos municípios.

--- a/src/app/pages/tela2/buttons/buttons.scss
+++ b/src/app/pages/tela2/buttons/buttons.scss
@@ -132,3 +132,12 @@ $btn-icon-size: 34px;
 .btn-group.flex-dropdown {
   display: flex;
 }
+
+#scroll {
+  width:250px;
+  height:300px;
+  background-color: transparent;
+  overflow: auto;
+  scrollbar-face-color: blue;
+
+}
