--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,9 +1,9 @@
-<div class="col-xs-12-col-sm-6-col-md-8">
 
   <div class="button-wrapper">
     <button type="button" class="btn btn-default btn-raised">INÍCIO</button>
     <button type="button" class="btn btn-default btn-raised">AJUDA</button>
   </div>
+
 
   <div class="row">
   </div>
@@ -50,6 +50,12 @@
     </div>
 
 
+      <div class="button-wrapper">
+        <button type="button" class="btn btn-default btn-raised">LIMPAR FILTRO</button>
+        <button type="button" class="btn btn-default btn-raised">BUSCAR</button>
+      </div>
+
+
       <div class="horizontal-scroll">
     <table class="table table-hover">
       <thead>
@@ -64,11 +70,39 @@
       <div class="row">
         </div>
 
-      <div class="row">
-      </div>
-      <ba-card class="col-xlg-0 col-xl-0"
-               title="" baCardClass="small-card">
-      </ba-card>
+
+      <ba-card title="QUESTÕES" baCardClass="with-scroll heading-widget">
+
+        <div class="section-block">
+          <h3><b>EIXO EQUIPE TÉCNICA.</b></h3>
+          <h4> <b> A equipe técnica está em conformidade com a nobrh? </b> </h4>
+          <h4> <b> São promovidas atividades de capacitação para equipe? </b> </h4>
+        </div>
+
+        <div class="section-block">
+          <h3><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></h3>
+          <h4> <b> O paif funciona conforme a resolução cit 04/2011?</b></h4>
+          <h4> <b>Existe regulamentação dos benefícios eventuais? </b></h4>
+          <h4> <b>A frequência das visitas domiciliares é compatível com a necessidade dos usuários?</b></h4>
+        </div>
+
+        <div class="section-block">
+        <h3><b>EIXO INFRAESTRUTURA.</b></h3>
+          <h4> <b> O equipamento possui acessibilidade conforme as normas estabelecidas pela abnt(nbr 9050)? </b></h4>
+        </div>
 
 
+        <ba-card class="col-xlg-6 col-xl-0"
+                 title="QUESTÕES" baCardClass="small-card">
+          <h3> <b> A equipe técnica está em conformidade com a nobrh?</b> </h3>
+        </ba-card>
+
+        <ba-card class="col-xlg-6 col-xl-0"
+                 title="REGRA DE COLORAÇÃO" baCardClass="small-card">
+
+          <h3> <b> Se o CRAS for de porte grande (5000 famílias) e a quantidade de técnicos de nível superior for menor
+          que 2 assistentes sociais, 1 psicólogo, e 1 profissional que compõe o SUAS ou a quantidade de técnicos
+            de nível médio for menor que 4: VERMELHO.</b> </h3>
+
+        </ba-card>
 
