Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente)

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -4,6 +4,7 @@
     <button type="button" class="btn btn-default btn-raised">AJUDA</button>
   </div>
 
+  <div class="widgets">
 
   <div class="row">
   </div>
@@ -40,7 +41,7 @@
       <div class="row">
         <div></div>
 
-      <ba-card class="col-xl-6 col xl-0"
+      <ba-card class="col-xl-6 col-xl-0"
         title="MUNICÍPIO" baCardClass="small-card with-scroll feed-panel">
       </ba-card>
 
@@ -74,20 +75,20 @@
       <ba-card title="QUESTÕES" baCardClass="with-scroll heading-widget">
 
         <div class="section-block">
-          <h3><b>EIXO EQUIPE TÉCNICA.</b></h3>
+          <h2><b>EIXO EQUIPE TÉCNICA.</b></h2>
           <h4> <b> A equipe técnica está em conformidade com a nobrh? </b> </h4>
           <h4> <b> São promovidas atividades de capacitação para equipe? </b> </h4>
         </div>
 
         <div class="section-block">
-          <h3><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></h3>
+          <h2><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></h2>
           <h4> <b> O paif funciona conforme a resolução cit 04/2011?</b></h4>
           <h4> <b>Existe regulamentação dos benefícios eventuais? </b></h4>
           <h4> <b>A frequência das visitas domiciliares é compatível com a necessidade dos usuários?</b></h4>
         </div>
 
         <div class="section-block">
-        <h3><b>EIXO INFRAESTRUTURA.</b></h3>
+        <h2><b>EIXO INFRAESTRUTURA.</b></h2>
           <h4> <b> O equipamento possui acessibilidade conforme as normas estabelecidas pela abnt(nbr 9050)? </b></h4>
         </div>
 
@@ -102,7 +103,28 @@
 
           <h3> <b> Se o CRAS for de porte grande (5000 famílias) e a quantidade de técnicos de nível superior for menor
           que 2 assistentes sociais, 1 psicólogo, e 1 profissional que compõe o SUAS ou a quantidade de técnicos
-            de nível médio for menor que 4: VERMELHO.</b> </h3>
+            de nível médio for menor que 4: Vermelho.</b> </h3>
 
         </ba-card>
+
+        <ba-card class="col-xlg-6 col-xl-0"
+                 title="LEGISLAÇÃO" baCardClass="small-card">
+
+          <h3> <b> Resolução nobrh/suas nº 01 de 25 de janeiro de 2007. </b> </h3>
+        </ba-card>
+
+
+
+        <ba-card class="col-xl-0 col-xl-0">
+
+        <div class="horizontal-scroll">
+          <h3><b>CRAS - BARRA DO PIRAÍ - CENTRO</b></h3>
+          <table class="table table-condensed">
+            <thead>
+            <tr>
+              <th><h3><b>JANEIRO/2016</b></h3></th>
+              <th><h3><b>MARÇO/2016</b></h3></th>
+              <th><h3><b>MAIO/2016</b></h3></th>
+              </tr>
+            </thead>
 
