--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -12,13 +12,13 @@
   <div class="row">
     <ba-card class="col-xlg-6 col-xl-0"
           title=" NOVA INSPEÇÃO " baCardClass="small-card">
-      <b>INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</b>
+      <b><h3>INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</h3></b>
     </ba-card>
 
 
       <ba-card class="col-xlg-6 col-xl-0"
                title="VISUALIZAÇÃO DE INSPEÇÕES - FILTROS PARA SELEÇÃO" baCardClass="small-card">
-        <b>OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS.</b>
+        <b> <h3> OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS. </h3></b>
       </ba-card>
     </div>
 
@@ -115,10 +115,10 @@
 
 
 
-        <ba-card class="col-xl-0 col-xl-0">
+        <ba-card class="col-xl-30 col-xl-0">
 
         <div class="horizontal-scroll">
-          <h3><b>CRAS - BARRA DO PIRAÍ - CENTRO</b></h3>
+          <h2><b>CRAS - BARRA DO PIRAÍ - CENTRO</b></h2>
           <table class="table table-condensed">
             <thead>
             <tr>
@@ -128,3 +128,12 @@
               </tr>
             </thead>
 
+            <div class="horizontal-scroll">
+              <h3><b>SIM</b></h3>
+
+              <div class="horizontal-scroll">
+                <h3><b>NÃO</b></h3>
+                <h3><b>SIM</b></h3>
+                <h3><b>SIM</b></h3>
+                <h3><b>SIM</b></h3>
+                <h3><b>NÃO</b></h3>
