criação do card dados dos municípios 2.

--- a/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.html
+++ b/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.html
@@ -1,5 +1,6 @@
 <div class="btn-group flex-dropdown" dropdown>
-      <button type="button" class="btn bg-primary" dropdownToggle addToggleClass="true">Tipo de Equipamento<span class="sr-only">Toggle Dropdown</span></button>
+      <button type="button" class="btn bg-primary" dropdownToggle addToggleClass="true">Tipo de Equipamento
+        <span class="sr-only">Toggle Dropdown</span></button>
       <ul class="dropdown-menu" dropdownMenu>
         <li class="dropdown-item"><a href="#"> CRAS </a></li>
         <li class="dropdown-divider"></li>
