--- a/src/app/pages/tela1/legislacao/legislacao.html
+++ b/src/app/pages/tela1/legislacao/legislacao.html
@@ -4,7 +4,7 @@
     <tr class="black-muted-bg">
       <td class="legislacao-icons"> </td>
 
-      <td > LEGISLAÇÃO <p> Relação e acesso à toda Legislação pertinente em relação <br>
+      <td > <img src="{{ ( 'legislacao2'| baProfilePicture ) }}" width="30" height="30" > LEGISLAÇÃO <p> Relação e acesso à toda Legislação pertinente em relação <br>
             ao tema e norteadora dos indicadores do projeto </p> </td>
     </tr>
     </thead>
