--- a/src/app/pages/tela1/orcamento/orcamento.html
+++ b/src/app/pages/tela1/orcamento/orcamento.html
@@ -4,7 +4,7 @@
 
     <tr class="black-muted-bg">
       <td class="orcamento-icons"> </td>
-      <td>ORÇAMENTOS <p> Relação de orçamentos federais, <br> estaduais e municipais </p> </td>
+      <td> <img src="{{ ( 'orcamento'| baProfilePicture ) }}" width="25" height="25" > ORÇAMENTOS <p> Relação de orçamentos federais, <br> estaduais e municipais </p> </td>
     </tr>
 
     </thead>
