--- a/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
+++ b/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
@@ -3,8 +3,7 @@
     <thead >
     <tr class="black-muted-bg">
       <td class="pecas-icons"> </td>
-
-      <td > PEÇAS DE ATUAÇÃO <p> Modelos padrão de documentos <br>  MPRJ para utilização pelos usuários </p> </td>
+      <td > <img src="{{ ( 'pecas2'| baProfilePicture ) }}" width="30" height="30" > PEÇAS DE ATUAÇÃO <p> Modelos padrão de documentos <br>  MPRJ para utilização pelos usuários </p> </td>
     </tr>
     </thead>
     <tbody>
