--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,3 +1,14 @@
-<e-buttons></e-buttons>
+<strong> Informações sobre os Municípios </strong>
+
+<!-- <e-buttons> </e-buttons> -->
 
 
+<div class="row">
+
+<dadosmunicipais2></dadosmunicipais2>
+
+<div id="scroll">
+  <municipios-buttons></municipios-buttons>
+</div>
+
+</div>
