--- a/src/app/theme/sass/conf/colorSchemes/_leve.scss
+++ b/src/app/theme/sass/conf/colorSchemes/_leve.scss
@@ -58,6 +58,21 @@ $hoverlink: $primary-dark;
 
 @mixin body-bg() {
   background-color: $body-bg;
+
+  $mainBgUrl: $images-root + 'branco.png';
+
+  &::before {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: url($mainBgUrl) no-repeat center center;
+    background-size: cover;
+    will-change: transform;
+    z-index: 0;
+  }
 }
 @mixin additional-bg() {
   //display: block; // additional background layer, hidden by default
