Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente)

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -100,12 +100,11 @@
 
         <ba-card class="col-xlg-6 col-xl-0"
                  title="REGRA DE COLORAÇÃO" baCardClass="small-card">
-
           <h3> <b> Se o CRAS for de porte grande (5000 famílias) e a quantidade de técnicos de nível superior for menor
           que 2 assistentes sociais, 1 psicólogo, e 1 profissional que compõe o SUAS ou a quantidade de técnicos
             de nível médio for menor que 4: Vermelho.</b> </h3>
-
         </ba-card>
+
 
         <ba-card class="col-xlg-6 col-xl-0"
                  title="LEGISLAÇÃO" baCardClass="small-card">
@@ -114,26 +113,18 @@
         </ba-card>
 
 
+        <div class="row">
+          <div></div>
 
-        <ba-card class="col-xl-30 col-xl-0">
+          <ba-card class="col-xl-6 col-xl-0"
+                   title="FALE CONOSCO" baCardClass="small-card with-scroll feed-panel">
+          </ba-card>
 
-        <div class="horizontal-scroll">
-          <h2><b>CRAS - BARRA DO PIRAÍ - CENTRO</b></h2>
-          <table class="table table-condensed">
-            <thead>
-            <tr>
-              <th><h3><b>JANEIRO/2016</b></h3></th>
-              <th><h3><b>MARÇO/2016</b></h3></th>
-              <th><h3><b>MAIO/2016</b></h3></th>
-              </tr>
-            </thead>
+          <ba-card class="col-xl-6 col xl-0"
+                   title="PERGUNTAS FREQUENTES" baCardClass="small-card with-scroll feed-panel">
+          </ba-card>
+        </div>
 
-            <div class="horizontal-scroll">
-              <h3><b>SIM</b></h3>
 
-              <div class="horizontal-scroll">
-                <h3><b>NÃO</b></h3>
-                <h3><b>SIM</b></h3>
-                <h3><b>SIM</b></h3>
-                <h3><b>SIM</b></h3>
-                <h3><b>NÃO</b></h3>
+
+
