--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,14 +1,21 @@
-<strong> Informações sobre os Municípios </strong>
+
 
 <!-- <e-buttons> </e-buttons> -->
 
 
 <div class="row">
 
+  <div class="col-xl-2 col-lg-3 col-md-3">
+   <riodejaneiro> </riodejaneiro>
+  </div>
+
+  <div class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
 <dadosmunicipais2></dadosmunicipais2>
 
 <div id="scroll">
   <municipios-buttons></municipios-buttons>
 </div>
+  </div>
+
 
 </div>
