--- a/src/app/pages/tela2/dadosmunicipais2/dadosmunicipais2.html
+++ b/src/app/pages/tela2/dadosmunicipais2/dadosmunicipais2.html
@@ -1,25 +1,13 @@
-<ba-card class="col-xl-3 col-lg-3 col-md-3" title="Município Barra do Piraí" >
-<!--
-  <p align="left"> FAMÍLIAS VULVERÁVEIS </p>
-
- PERCENTUAL DO MUNICÍPIO   PERCENTUAL DO ESTADO
- <hr color="white" >
-
-  TOTAL DE EQUIPAMENTOS    PERCENTUAL DO ESTADO
-  <hr color="white">
-<div class="box"> </div>  <div class="box linha-vertical">  </div>
-  CRAS <h1> 4 </h1>
-  CREAS <h1> 1 </h1>
-  CENTRO POP <h1> 0 </h1> -->
-
+<ba-card class="col-xl-6 col-lg-6 col-md-6"  >
   <div class="horizontal-scroll">
     <table>
       <tr>
+        <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do Piraí </p></td>
         <td class="alinhadir"> FAMÍLIAS VULNERÁVEIS <p class="dados"> 9.014</p></td>
       </tr>
 
       <tr>
-        <td> PERCENTUAL MUNICIPAL <p class="percentual"> 9,89% </p> </td>
+        <td > PERCENTUAL MUNICIPAL <p class="percentual"> 9,89% </p> </td>
         <td> PERCENTUAL ESTADUAL <p class="percentual"> 0,63% </td>
       </tr>
     </table>
