--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -61,7 +61,15 @@
     <table class="table table-hover">
       <thead>
       <tr class="black-muted-bg">
-        <td class="-"> </td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
+        <td class="-"></td>
         <td> <b> <h2> RESULTADOS DA CONSULTA </h2> </b>  </td>
       </tr>
       </thead>
@@ -116,15 +124,54 @@
         <div class="row">
           <div></div>
 
-          <ba-card class="col-xl-6 col-xl-0"
-                   title="FALE CONOSCO" baCardClass="small-card with-scroll feed-panel">
+          <ba-card class="col-xl-6 col-xl-15"
+                   title="FALE CONOSCO" baCardClass="feed-panel">
+            <h4> <b> Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
+            <h4> <b>cao.cidadania@mprj.mp.br  2531.9728 | 2220-2462 |2215-1407 - FAX 2240-4653 </b> </h4>
+
+            &nbsp;
+            &nbsp;
+
+            <tr>
+            <b>NOME</b>
+            </tr>
+            &nbsp;
+
+
+          <input class="form-control" id="inputFirstName" placeholder="Seu primeiro nome..." type="text">
+            &nbsp;
+
+          <tr>
+          <b>E-MAIL</b>
+          </tr>
+          &nbsp;
+          <input class="form-control" id="inputFirstName" placeholder="Fulano.tal@mprj.mp.br" type="text">
           </ba-card>
 
+
+
+          <div>
           <ba-card class="col-xl-6 col xl-0"
-                   title="PERGUNTAS FREQUENTES" baCardClass="small-card with-scroll feed-panel">
+          title="PERGUNTAS FREQUENTES" baCardClass="medium-card feed-panel">
+
+
+            <h3><b><i>O Cadastro Único para Programa Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
+              com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
+            Dessa forma, o Cadastro Único possibilita conhecer a realidade socioeconômica dessas famílias, trazendo informações
+            de todo o núcleo familiar, das características do domicílio, das formas de acesso a serviços públicos essenciais e também
+            dados de cada um dos componentes da família.
+            O Cadastro Único, regulamentado pelo Decreto nº 6.135/07 e coordenado pelo Ministério do Desenvolvimento Social e Combate
+            à Fome (MDS), deve ser obrigatoriamente utilizado para seleção de benefíciários e integração de programas sociais do Governo Federal,
+            como o Bolsa Família. Suas informações podem também ser utilizadas pelos governos estaduais e municipais para obter o diagnóstico
+              socioeconômico das famílias cadastradas, possibilitando a análise das suas principais necessidades. Famílias com renda superior a meio
+              salário mínimo também podem ser inscritas, desde que sua inserção esteja vinculada à inclusão e/ou permanência em programas sociais
+              implementados pelo poder público nas três esferas do Governo. </i></b></h3>
           </ba-card>
         </div>
 
 
 
+          <div class="form-group">
+            <textarea class="form-control" placeholder="Message"></textarea>
+          </div>
 
