-inserção do botão: Tipo de Equipamento -criação da lista de equipamentos

--- a/src/app/pages/tela2/listaequipamentos/listaequipamentos.scss
+++ b/src/app/pages/tela2/listaequipamentos/listaequipamentos.scss
@@ -25,15 +25,23 @@
   text-align: center;
 }
 
-.fonte{
-  font-family: "Arial Black", arial-black;
-  font-size: 20px;
-  color: white;
-}
-.dados{
-  font-family: "Arial Black", arial-black;
-  font-size: 20px;
+.nome-equipamento{
   color:darkblue;
+}
+
+.porte-equipamento{
+  color:darkblue;
+}
+
+
+.parágrafo{
+  color:white;
+}
+
+.parágrafo-alinhadir{
+  color:white;
+  text-align:right;
+  width:20%;
 }
 
 hr{
