--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,8 +1,4 @@
 
-
-<!-- <e-buttons> </e-buttons> -->
-
-
 <div class="row">
 
   <div class="col-xl-2 col-lg-3 col-md-3">
@@ -16,6 +12,14 @@
   <municipios-buttons></municipios-buttons>
 </div>
   </div>
+
+</div>
+
+
+<div class="row">
+  <e-buttons></e-buttons>
+
+    <lista-equipamentos></lista-equipamentos>
 
 
 </div>
