--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -2,11 +2,11 @@
 <div class="row">
 
   <div class="col-xl-2 col-lg-3 col-md-3">
-   <riodejaneiro> </riodejaneiro>
+   <rio-de-janeiro> </rio-de-janeiro>
   </div>
 
   <div class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-<dadosmunicipais2></dadosmunicipais2>
+<dados-municipais2></dados-municipais2>
 
 <div id="scroll">
   <municipios-buttons></municipios-buttons>
@@ -15,11 +15,18 @@
 
 </div>
 
-
+<e-buttons></e-buttons>
 <div class="row">
-  <e-buttons></e-buttons>
-
     <lista-equipamentos></lista-equipamentos>
+</div>
+
+Indicadores Orçamentários
+<div class="row">
+
+    <ba-card class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <pse></pse>
+    </ba-card>
 
 
 </div>
+
