Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (modificando a parte *perguntas frequentes*) -

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -4,6 +4,7 @@
     <button type="button" class="btn btn-raised"><b>AJUDA</b></button>
   </div>
 
+  &nbsp;
   <div class="widgets">
 
   <div class="row">
@@ -81,7 +82,7 @@
         <button type="button" class="btn btn-raised"><b>BUSCAR</b></button>
       </div>
 
-
+      &nbsp;
       <div class="horizontal-scroll">
     <table class="table table-hover">
       <thead>
@@ -108,20 +109,21 @@
       <ba-card title="QUESTÕES" baCardClass="with-scroll heading-widget">
 
         <div class="section-block">
-          <h2><b>EIXO EQUIPE TÉCNICA.</b></h2>
+          <h2><b>    <span class="label label-primary"> EIXO EQUIPE TÉCNICA. </span></b></h2>
           <h4> <b> A equipe técnica está em conformidade com a nobrh? </b> </h4>
           <h4> <b> São promovidas atividades de capacitação para equipe? </b> </h4>
         </div>
 
+
         <div class="section-block">
-          <h2><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></h2>
+          <h2><b> <span class="label label-primary"> EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS. </span></b></h2>
           <h4> <b> O paif funciona conforme a resolução cit 04/2011?</b></h4>
           <h4> <b>Existe regulamentação dos benefícios eventuais? </b></h4>
           <h4> <b>A frequência das visitas domiciliares é compatível com a necessidade dos usuários?</b></h4>
         </div>
 
         <div class="section-block">
-        <h2><b>EIXO INFRAESTRUTURA.</b></h2>
+          <h2><b> <span class="label label-primary"> EIXO INFRAESTRUTURA.</span></b></h2>
           <h4> <b> O equipamento possui acessibilidade conforme as normas estabelecidas pela abnt(nbr 9050)? </b></h4>
         </div>
 
@@ -160,6 +162,7 @@
 
             <h3 class="card-title">_____________________________________________________________________________________________________________</h3>
 
+
             <label class="col-sm-2 form-control-label" for="inputEmail3"><b>NOME</b></label>
               <div class="col-sm-10">
               </div>
@@ -170,19 +173,33 @@
             <div class="row">
             </div>
 
-
             <label class="col-sm-2 form-control-label" for="inputEmail3"><b>E-MAIL</b></label>
             <div class="col-sm-10">
             </div>
-          &nbsp;
-          <input class="form-control" id="inputFirstName" placeholder="Fulano.tal@mprj.mp.br" type="text">
+            &nbsp;
+            <input class="form-control" id="inputFirstName" placeholder="Fulano.tal@mprj.mp.br" type="text">
+            &nbsp;
+
+            <div class="row">
+            </div>
+
+            <label class="col-sm-2 form-control-label" for="inputEmail3"><b>MENSAGEM</b></label>
+            <div class="col-sm-10">
+            </div>
+            &nbsp;
+
+            <div class="form-group">
+            <textarea class="form-control" placeholder="Escreve aqui sua mensagem..."></textarea>
+            </div>
+            &nbsp;
+            <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
           </ba-card>
           </div>
 
+
           <div>
           <ba-card class="col-xl-6 col xl-0"
-          title="PERGUNTAS FREQUENTES" baCardClass="medium-card feed-panel">
-
+          title="PERGUNTAS FREQUENTES" baCardClass="">
 
             <h3><b><i>O Cadastro Único para Programa Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
               com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
@@ -197,10 +214,3 @@
               implementados pelo poder público nas três esferas do Governo. </i></b></h3>
           </ba-card>
         </div>
-
-
-          <div class="form-group row">
-                        <div class="col-sm-10">
-              <input class="form-control" id="inputEmail3" placeholder="Email" type="email">
-            </div>
-          </div>
