-indicadores orçamentários ( falta ajustar tamanho e cor) -início da criação dos indicadores sociais -criação do botão dropdown ano.

--- a/src/app/pages/tela2/buttons/buttons.scss
+++ b/src/app/pages/tela2/buttons/buttons.scss
@@ -135,7 +135,14 @@ $btn-icon-size: 34px;
 
 #scroll {
   width:250px;
-  height:300px;
+  height:200px;
+  background-color: transparent;
+  overflow: auto;
+}
+
+#barra {
+  width:180px;
+  height:100px;
   background-color: transparent;
   overflow: auto;
 }
