--- a/src/app/pages/tela2/pse/pse.html
+++ b/src/app/pages/tela2/pse/pse.html
@@ -1,4 +1,11 @@
-PSE
+<div class="col-xl-2 col-lg-3 col-md-3">
+<h3> PSE </h3>
+TOTAL DE RECURSOS <p> 146.835,10 </p> <hr>
+UTILIZADO <p> 38.334,04 </p> <hr>
+NÃO UTILIZADO (OMISSÃO OU BLOQUEIO) <p> 108.501,06 </p>
+</div>
+
+<div class="col">
 <div class="row pie-charts">
   <div *ngFor="let chart of charts" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-xs-12">
 
@@ -15,3 +22,6 @@ PSE
 
   </div>
 </div>
+</div>
+
+<hr>
