--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,32 +1,41 @@
-
 <div class="row">
-
-  <div class="col-xl-2 col-lg-3 col-md-3">
+    <ba-card class="col-xl-3 col-lg-3 col-md-3">
    <rio-de-janeiro> </rio-de-janeiro>
-  </div>
+    </ba-card>
 
   <div class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-<dados-municipais2></dados-municipais2>
+    <dados-municipais2></dados-municipais2>
 
 <div id="scroll">
   <municipios-buttons></municipios-buttons>
 </div>
   </div>
-
 </div>
 
+
+<div>
+<ba-card title="Lista de Equipamentos" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <e-buttons></e-buttons>
+
 <div class="row">
     <lista-equipamentos></lista-equipamentos>
 </div>
 
-Indicadores Orçamentários
-<div class="row">
+</ba-card>
+</div>
 
-    <ba-card class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <pse></pse>
-    </ba-card>
 
+<div>
+  <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <ano-buttons> </ano-buttons>
+    <div class="row">
+       <ba-card> <pse> </pse></ba-card>
+       <ba-card> <psb> </psb></ba-card>
+      <programas> </programas>
+      </div>
+  </ba-card>
 
 </div>
 
+
+<indicadores-sociais> </indicadores-sociais>
