-início do card indicadores sociais.

--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -1,6 +1,10 @@
 <div class="typography-document-samples row">
 
-          <h3> <b> SOBRE O PROJETO </b> </h3>
+          <h1>
+            <p class="fonte"> SOBRE </p>
+            <p class="fonte"> <b> O PROJETO </b> </p>
+
+          </h1>
 
           <hr color="white">
 
