--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -1,1 +1,27 @@
-<strong> INDICADORES SOCIAIS <h2> TODO CÓDIGO AQUI </h2> </strong>
+<div>
+  <ba-card title="Indicadores Sociais">
+    <div class="horizontal-scroll">
+<table>
+  <tr>
+    <p> CADASTRO ÚNICO </p>
+    <hr>  </tr>
+
+  <tr>
+    <p> BENEFÍCIOS EVENTUAIS </p>
+    <hr>  </tr>
+
+  <tr>
+    <p> PAIF </p>
+    <hr>  </tr>
+
+  <tr>
+    <p> PAEFI </p>
+    <hr>  </tr>
+
+
+</table>
+</div>
+
+
+  </ba-card>
+</div>
