--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -25,17 +25,21 @@
 </div>
 
 
-<div>
+<div class="row">
+
   <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <ano-buttons> </ano-buttons>
+
     <div class="row">
        <ba-card> <pse> </pse></ba-card>
        <ba-card> <psb> </psb></ba-card>
-      <programas> </programas>
+      <ba-card> <programas> </programas></ba-card>
       </div>
   </ba-card>
 
 </div>
 
+<div class="row">
+  <indicadores-sociais> </indicadores-sociais>
+</div>
 
-<indicadores-sociais> </indicadores-sociais>
