--- a/src/app/pages/tela1/tela1.html
+++ b/src/app/pages/tela1/tela1.html
@@ -3,7 +3,7 @@
     <typography></typography>
   </div>
 
-  <ba-card class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7" align="right">
+  <ba-card title="Indicadores referentes às últimas inspeções em cada município" class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7">
       <e-buttons></e-buttons>
       <contextual-table></contextual-table>
       <chartist></chartist>
