--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
@@ -1,3 +1,4 @@
+<div>
 <ba-card class="col-xl-6 col-lg-6 col-md-6"  >
   <div class="horizontal-scroll">
     <table>
@@ -37,3 +38,4 @@
   </div>
 
 </ba-card>
+</div>
